syntax = "proto3";
package kms;

// TODO seperate into threshold and central calls
service CoordinatorEndpoint {
  rpc KeyGenPreproc(KeyGenPreprocRequest) returns (Empty);
  rpc GetPreprocStatus(KeyGenPreprocRequest) returns (KeyGenPreprocStatus);
  // Generate new keys asynchronously
  rpc KeyGen(KeyGenRequest) returns (Empty);
  // return a URI where they can be accessed.
  // The keys at the URI contains signature and authentication information.
  // NOTE: Unprivileged and insecure call
  rpc GetKeyGenResult(RequestId) returns (KeyGenResult);
  // Decrypt a ciphertext and return the signed plaintext.
  rpc Decrypt(DecryptionRequest) returns (Empty);
  rpc GetDecryptResult(RequestId) returns (DecryptionResponse);
  // Reencrypt a ciphertext under a user-specified key and return a signcrypted share of the dercrypted plaintext.
  rpc Reencrypt(ReencryptionRequest) returns (Empty);
  rpc GetReencryptResult(RequestId) returns (ReencryptionResponse);
  rpc CrsGen(CrsGenRequest) returns (Empty);
  rpc GetCrsGenResult(RequestId) returns (CrsGenResult);
}

// Placeholder response, when no content is needed
message Empty {

}

// Simple response to return an ID, to be used to retrieve the computed result later on.
message RequestId {
  string request_id = 1;
}

//Status for Keygen Preproc
enum KeyGenPreprocStatusEnum {
  Missing = 0;
  InProgress = 1;
  Finished = 2;
  Error = 3;
  WrongRequest = 4;
}

// The plaintext types that can be encrypted in a fhevm ciphertext.
enum FheType {
  Bool = 0;
  Euint4 = 1;
  Euint8 = 2;
  Euint16 = 3;
  Euint32 = 4;
  Euint64 = 5;
  Euint128 = 6;
  Euint160 = 7;
}

message KeyGenPreprocRequest {
  Config config = 1;
  ParamChoice params = 2;
  RequestId request_id = 3;
}

message KeyGenPreprocStatus {
  KeyGenPreprocStatusEnum result = 1;
}

// Request for generating new keys under a certain handle and return a URI where they can be accessed.
// TODO handle the potential need for randomness in the signed stored keys which may be needed to ensure provable EU-CMA security of ECDSA.
message KeyGenRequest {
  Config config = 1;
  ParamChoice params = 2;
  //TODO(renaming): seq_no is preproc_id in tech-spec, and should be a RequestId 
  //(or refactored, see issue#427)
  uint64 seq_no = 3;
  RequestId request_id = 4;
}

message Config {
  // TODO placeholder
}

message KeyGenResult {
  // The ID of the key generation request
  RequestId request_id = 1;
  map<string, FhePubKeyInfo> key_results = 2;
}

// The result of generation of a public key
message FhePubKeyInfo {
  // The key handle; hash digest of the key bytes
  string key_handle = 1;
  // Signature on the key handle
  bytes signature = 2;
}

enum ParamChoice {
  Test = 0;
  Default = 1;
}

message CrsGenRequest {
  Config config = 1;
  ParamChoice params = 2;
  RequestId request_id = 3;
}

message CrsGenResult {
  // The ID of the crs generation request
  RequestId request_id = 1;
  // The struct holding the signature and the handle of the CRS
  FhePubKeyInfo crs_results = 2;
}

message DecryptionRequest {
  // Version of the request format.
  uint32 version = 1;
  // The amount of responses needed to sure security of the result.
  // This implies the threshold used.
  // Needed to avoid a single malicious server taking over a request that should
  // have been distributed.
  uint32 servers_needed = 2;
  // Randomness added to the request.
  // Required to ensure formal EU-CMA security when using ECDSA.
  bytes randomness = 3;
  // The type of plaintext encrypted.
  FheType fhe_type = 4;
  // The key id to use for decryption, will be the request_id used for key generation
  string key_id = 5;
  // The actual ciphertext to decrypt, taken directly from the fhevm.
  bytes ciphertext = 6;
  // The ID of the decryption request. Will be the hash digest the other fields of this message object.
  RequestId request_id = 7;
}

message DecryptionResponsePayload {
  // Version of the response format.
  uint32 version = 1;
  // Servers_needed are not really needed since there is a link to the
  // digest, however, it seems better to be able to handle a response without
  // getting data from the request as well. but this is also a security issue
  // since it is possible to get meaning from the response without directly
  // linking it to a request
  //
  // The amount of responses needed to sure security of the result.
  // This implies the threshold used.
  uint32 servers_needed = 2;
  // The server's signature verification key.
  // Encoded using SEC1.
  // Needed to validate the response, but MUST also be linked to a list of
  // trusted keys.
  // TODO should be renamed to make it clear it is the server's key
  bytes verification_key = 3;
  // Digest of the request validated.
  // Needed to ensure that the response is for the expected request.
  bytes digest = 4;
  // Randomness specified in the request to ensure EU-CMA of the signed
  // response.
  // TODO check that we don't need two types of randomness. One for the reuqest
  // and one for the response
  bytes plaintext = 5;
}

message DecryptionResponse {
  bytes signature = 1;
  // Signature of the ASN1 DER serialization of [DecryptionResponsePayload].
  DecryptionResponsePayload payload = 2;
}

message AggregatedDecryptionResponse {
  repeated DecryptionResponse responses = 1;
}

message ReencryptionRequestPayload {
  // Version of the request format.
  uint32 version = 1;
  // The amount of shares needed to recombine the result.
  // This implies the threshold used.
  // Needed to avoid a single malicious server taking over a request that should
  // have been distributed.
  uint32 servers_needed = 2;
  // The server's signature verification key.
  // Encoded using SEC1.
  // TODO not needed in the request! Should be removed
  bytes verification_key = 3;
  // Randomness specified in the request to ensure EU-CMA of the signed response.
  // TODO check that we don't need two types of randomness. One for the reuqest and one for the response
  // TODO also check potentiel risk with repeated calls
  bytes randomness = 4;
  // Encoding of the user's public encryption key for this request.
  // Encoding using the default encoding of libsodium, i.e. the 32 bytes of a
  // Montgomery point.
  bytes enc_key = 5;
  // The type of plaintext encrypted.
  FheType fhe_type = 6;
  // The key id to use for decryption. Will be the request_id used during key generation
  string key_id = 7;
  // The actual ciphertext to decrypt, taken directly from the fhevm.
  bytes ciphertext = 8;
  // The ID of the reencryption request. Will be the hash digest the other fields of this message object.
  RequestId request_id = 9;
}

// https://eips.ethereum.org/EIPS/eip-712#definition-of-domainseparator
// eventually chain_id, verifying_contract and salt will be parsed in to solidity types
message Eip712DomainMsg {
  string name = 1;
  string version = 2;
  bytes chain_id = 3;
  string verifying_contract = 4;
  bytes salt = 5;
}

message ReencryptionRequest {
  // Signature of the ASN1 DER serialization of [ReencryptionRequestPayload].
  bytes signature = 1;
  ReencryptionRequestPayload payload = 2;
  Eip712DomainMsg domain = 3;
}

message ReencryptionResponse {
  // Version of the response format.
  uint32 version = 1;
  // Servers_needed are not really needed since there is a link to the
  // digest, however, it seems better to be able to handle a response without
  // getting data from the request as well. but this is also a security issue
  // since it is possible to get meaning from the response without directly
  // linking it to a request
  //
  // The amount of shares needed to recombine the result.
  // This implies the threshold used.
  uint32 servers_needed = 2;
  // The server's signature verification key.
  // Encoded using SEC1.
  // Needed to validate the response, but MUST also be linked to a list of
  // trusted keys.
  bytes verification_key = 3;
  // Digest of the request validated.
  // Needed to ensure that the response is for the expected request.
  bytes digest = 4;
  // The type of plaintext encrypted.
  FheType fhe_type = 5;
  // The signcrypted payload, using a hybrid encryption approach in
  // sign-then-encrypt.
  bytes signcrypted_ciphertext = 6;
}

message AggregatedReencryptionResponse {
  map<uint32, ReencryptionResponse> responses = 1;
}
